.rendered/envs/friclu/immich/ingress-immich-server-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-server-internal
  namespace: immich
spec:
  ingressClassName: nginx
  rules:
    - host: immich.friclu
      http:
        paths:
          - backend:
              service:
                name: immich-server
                port:
                  number: 2283
            path: /
            pathType: Prefix
